<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Погода у Львові</string>
    <string name="action_settings">Налаштування</string>
    <string name="sunrise">Схід сонця:</string>
    <string name="sunset">Захід сонця:</string>
    <string name="description">Опис</string>
    <string name="temperature">Температура:</string>
    <string name="pressure">Тиск:</string>
    <string name="humidity">Вологість:</string>
    <string name="pressure_unit">гПа</string>
    <string name="wind_speed">Швидкість вітру:</string>
    <string name="wind_direction">Напрям вітру:</string>
    <string name="wind_speed_unit">м/с</string>
    <string name="clouds">Хмарність:</string>
    <string name="temperature_unit">℃</string>
    <string name="humidity_unit">%</string>
    <string name="clouds_unit">%</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="now">Зараз</string>
</resources>